--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -396,7 +396,7 @@ section {
 }
 
 .navbar-mobile a:hover,
-.navbar-mobile .active,
+/*.navbar-mobile .active,*/
 .navbar-mobile li:hover>a {
   color: #4154f1;
 }
